# powerplant-coding-challenge

./: Dockerfile  README.md  config.yml  main.py  pyproject.toml  requirements.txt
core/: __init__.py  api.py  classes.py  func.py  utils.py
tests/: test.py
